tests/negative_pomidory/last_orphan_obj.pomidor

When I *click on the #practice_menu_button I get #tomato :)